Fix scroll overflow

--- a/style.css
+++ b/style.css
@@ -205,4 +205,7 @@ button {
     position: absolute;
     width: 100%;
   }
+  body {
+    overflow: hidden;
+  }
 }
